@@ -1,6 +1,7 @@
 [1.7.0-SNAPSHOT]
 - [BREAKING] LayoutRuleset is now applied to both horizontal and vertical calculations
 - [BREAKING] UI minHeight now includes padding + margin in check
+- [BREAKING] TiledCollisionFactory now takes TiledMap as parameter
 - (#74) Added TiledMapLoader for loading TiledMap instances via AssetManager
 - Added new FlexDirections; ROW_REVERSE and CENTER
 - Added Sprite#getAlpha() method
